[package]
name = "pulsar-compose"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
dirs = "5.0.1"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive", "serde_derive"] }
serde_yaml = "0.9.34"
strum = { version = "0.26.2", features = ["derive"] }
